[gd_scene format=3 uid="uid://jqdtjpeiam5u"]

[ext_resource type="PackedScene" uid="uid://d1lths6cgu0tm" path="res://player.tscn" id="1_glv2v"]
[ext_resource type="Script" uid="uid://o7qxh1ah4udg" path="res://main.gd" id="1_r0du0"]
[ext_resource type="PackedScene" uid="uid://0m5v7c1rwuhe" path="res://mob.tscn" id="2_cm0pq"]
[ext_resource type="PackedScene" uid="uid://c35bkl78tg35l" path="res://power_up.tscn" id="3_lgr22"]
[ext_resource type="PackedScene" uid="uid://d183d7eionied" path="res://hud.tscn" id="4_cm0pq"]
[ext_resource type="VideoStream" uid="uid://bxwus63f161pw" path="res://assets/fondo_de_pantalla/fondo_marino_animado.ogv" id="4_trn2v"]
[ext_resource type="AudioStream" uid="uid://dhmw3e3yfn4jh" path="res://art/House In a Forest Loop.ogg" id="5_3dxm6"]
[ext_resource type="AudioStream" uid="uid://dgr4d36m13sfx" path="res://art/gameover.wav" id="5_fos0i"]

[sub_resource type="Curve2D" id="Curve2D_trn2v"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 10, -6, 0, 0, 0, 0, 1922, -13, 0, 0, 0, 0, 1911, 1071, 0, 0, 0, 0, 14, 1056, 0, 0, 0, 0, 14, -13, 0, 0, 0, 0, 10, -6)
}
point_count = 6

[node name="Main" type="Node" unique_id=340938132 node_paths=PackedStringArray("mod_spawn_location")]
script = ExtResource("1_r0du0")
mob_scene = ExtResource("2_cm0pq")
powerup_scene = ExtResource("3_lgr22")
mod_spawn_location = NodePath("MobPath/MobSpawnLocation")

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="." unique_id=1031642266]
offset_left = 10.0
offset_right = 1930.0
offset_bottom = 1080.0
stream = ExtResource("4_trn2v")
autoplay = true
expand = true
loop = true

[node name="Player" parent="." unique_id=1426854690 instance=ExtResource("1_glv2v")]
position = Vector2(974, 528)

[node name="MobTimer" type="Timer" parent="." unique_id=359622055]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="." unique_id=2030056870]

[node name="StartTimer" type="Timer" parent="." unique_id=857173139]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="." unique_id=631148986]
position = Vector2(974, 528)

[node name="HUD" parent="." unique_id=1850907985 instance=ExtResource("4_cm0pq")]

[node name="Music" type="AudioStreamPlayer" parent="." unique_id=126834140]
stream = ExtResource("5_3dxm6")
parameters/looping = true

[node name="DeathSound" type="AudioStreamPlayer" parent="." unique_id=1326629500]
stream = ExtResource("5_fos0i")

[node name="PowerUpTimer" type="Timer" parent="." unique_id=655332334]
wait_time = 6.0

[node name="EffectTimer" type="Timer" parent="." unique_id=671880442]

[node name="MobPath" type="Path2D" parent="." unique_id=592138291]
curve = SubResource("Curve2D_trn2v")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath" unique_id=531304078]
position = Vector2(10, -6)
rotation = -0.0036610714
cubic_interp = false

[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="timeout" from="PowerUpTimer" to="." method="_on_power_up_timer_timeout"]
[connection signal="timeout" from="EffectTimer" to="." method="_on_effect_timer_timeout"]
